--- a/onebusaway-quickstart-assembly/pom.xml
+++ b/onebusaway-quickstart-assembly/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>onebusaway-quickstart</artifactId>
     <groupId>org.onebusaway</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
   </parent>
   <groupId>org.onebusaway</groupId>
   <artifactId>onebusaway-quickstart-assembly</artifactId>
@@ -20,19 +20,19 @@
     <dependency>
       <groupId>org.onebusaway</groupId>
       <artifactId>onebusaway-webapp</artifactId>
-      <version>${onebusaway.version}</version>
+      <version>${onebusaway_version}</version>
       <type>war</type>
     </dependency>
     <dependency>
       <groupId>org.onebusaway</groupId>
       <artifactId>onebusaway-api-webapp</artifactId>
-      <version>${onebusaway.version}</version>
+      <version>${onebusaway_version}</version>
       <type>war</type>
     </dependency>
     <dependency>
       <groupId>org.onebusaway</groupId>
       <artifactId>onebusaway-transit-data-federation-webapp</artifactId>
-      <version>${onebusaway.version}</version>
+      <version>${onebusaway_version}</version>
       <type>war</type>
     </dependency>
   </dependencies>
