--- a/onebusaway-quickstart-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/onebusaway-quickstart-webapp/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/data-sources.xml
+            classpath:data-sources.xml
             classpath:org/onebusaway/webapp/application-context-webapp.xml
             classpath:org/onebusaway/transit_data_federation/application-context-webapp.xml
         </param-value>
@@ -21,6 +21,10 @@
     </context-param>
 
     <!-- Filters -->
+    <filter>
+      <filter-name>welcomeFilter</filter-name>
+      <filter-class>org.onebusaway.quickstart.webapp.WelcomeFilter</filter-class>
+    </filter>
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -42,6 +46,10 @@
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsExecuteFilter</filter-class>
     </filter>
     
+    <filter-mapping>
+        <filter-name>welcomeFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
