--- a/onebusaway-quickstart-bootstrap/pom.xml
+++ b/onebusaway-quickstart-bootstrap/pom.xml
@@ -18,6 +18,12 @@
 
     <dependency>
       <groupId>org.onebusaway</groupId>
+      <artifactId>onebusaway-quickstart-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.onebusaway</groupId>
       <artifactId>onebusaway-transit-data-federation</artifactId>
       <version>${onebusaway_version}</version>
       <scope>provided</scope>
@@ -67,7 +73,6 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.2</version>
     </dependency>
 
   </dependencies>
