--- a/onebusaway-quickstart-webapp/pom.xml
+++ b/onebusaway-quickstart-webapp/pom.xml
@@ -9,31 +9,38 @@
   </parent>
   <groupId>org.onebusaway</groupId>
   <artifactId>onebusaway-quickstart-webapp</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>onebusaway-quickstart-webapp</name>
 
   <dependencies>
     <dependency>
       <groupId>org.onebusaway</groupId>
-      <artifactId>onebusaway-wiki-integration-file</artifactId>
-      <version>${wiki.integration.version}</version>
+      <artifactId>onebusaway-quickstart-common</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.struts</groupId>
-      <artifactId>struts2-core</artifactId>
-      <version>2.1.8.1</version>
-    </dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <scope>provided</scope>
+    </dependency>    
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
       <scope>provided</scope>
     </dependency>
+<!--     <dependency> -->
+<!--       <groupId>javax.servlet</groupId> -->
+<!--       <artifactId>jsp-api</artifactId> -->
+<!--       <version>2.0</version> -->
+<!--       <scope>provided</scope> -->
+<!--     </dependency> -->
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.0</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>3.0.3.RELEASE</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
