--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
     <module>onebusaway-quickstart-bootstrap</module>
     <module>onebusaway-quickstart-webapp</module>
     <module>onebusaway-quickstart-assembly</module>
+    <module>onebusaway-quickstart-common</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.2</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
 </project>
