--- a/onebusaway-quickstart-assembly/src/main/assembly/onebusaway-quickstart-api-webapp/WEB-INF/web.xml
+++ b/onebusaway-quickstart-assembly/src/main/assembly/onebusaway-quickstart-api-webapp/WEB-INF/web.xml
@@ -33,6 +33,10 @@
 
   <!-- Filters -->
   <filter>
+      <filter-name>welcomeFilter</filter-name>
+      <filter-class>org.onebusaway.quickstart.webapp.WelcomeFilter</filter-class>
+    </filter>
+  <filter>
     <filter-name>struts-prepare-and-execute</filter-name>
     <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
