--- a/onebusaway-quickstart-webapp/pom.xml
+++ b/onebusaway-quickstart-webapp/pom.xml
@@ -12,7 +12,11 @@
   <packaging>jar</packaging>
 
   <name>onebusaway-quickstart-webapp</name>
-
+  <description>
+      Custom webapp classes that assist in dynamically customizing the Spring webapp application based on command-line
+      arguments.
+  </description>
+  
   <dependencies>
     <dependency>
       <groupId>org.onebusaway</groupId>
@@ -31,12 +35,6 @@
       <version>2.5</version>
       <scope>provided</scope>
     </dependency>
-<!--     <dependency> -->
-<!--       <groupId>javax.servlet</groupId> -->
-<!--       <artifactId>jsp-api</artifactId> -->
-<!--       <version>2.0</version> -->
-<!--       <scope>provided</scope> -->
-<!--     </dependency> -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
