--- a/onebusaway-quickstart-assembly/src/main/assembly/onebusaway-quickstart-webapp/WEB-INF/web.xml
+++ b/onebusaway-quickstart-assembly/src/main/assembly/onebusaway-quickstart-webapp/WEB-INF/web.xml
@@ -14,6 +14,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath:data-sources.xml
+            classpath:org/onebusaway/api/application-context-webapp.xml
             classpath:org/onebusaway/webapp/application-context-webapp.xml
             classpath:org/onebusaway/transit_data_federation/application-context-webapp.xml
         </param-value>
