--- a/onebusaway-quickstart-mains/pom.xml
+++ b/onebusaway-quickstart-mains/pom.xml
@@ -13,7 +13,7 @@
     Actual entry points for transit data bundle building and running an embedded instance of Jetty for hosting a
     OneBusAway webapp instance
   </description>
-  
+
   <properties>
     <jetty.version>7.4.1.v20110513</jetty.version>
   </properties>
@@ -70,6 +70,18 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>net.java.dev.beansbinding</groupId>
+      <artifactId>beansbinding</artifactId>
+      <version>1.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.miglayout</groupId>
+      <artifactId>miglayout</artifactId>
+      <version>3.7.4</version>
+      <classifier>swing</classifier>
     </dependency>
 
   </dependencies>
