--- a/onebusaway-quickstart-webapp/pom.xml
+++ b/onebusaway-quickstart-webapp/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>onebusaway-quickstart</artifactId>
     <groupId>org.onebusaway</groupId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
   <groupId>org.onebusaway</groupId>
   <artifactId>onebusaway-quickstart-webapp</artifactId>
