--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,8 @@
   <parent>
     <artifactId>onebusaway</artifactId>
     <groupId>org.onebusaway</groupId>
-    <version>1.1.0</version>
+    <version>1.1.4-SNAPSHOT</version>
   </parent>
-  <groupId>org.onebusaway</groupId>
   <artifactId>onebusaway-quickstart</artifactId>
   <version>1.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
