--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,18 @@
   <parent>
     <artifactId>onebusaway</artifactId>
     <groupId>org.onebusaway</groupId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.6</version>
   </parent>
   <artifactId>onebusaway-quickstart</artifactId>
   <version>1.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>onebusaway-quickstart</name>
-  <description>Quickly build and deploy a basic OneBusAway instance</description>
+  <description>Quickly build and deploy a basic OneBusAway application suite instance.</description>
+  <url>https://github.com/OneBusAway/onebusaway-quickstart/wiki/</url>
 
   <properties>
     <onebusaway_version>1.0.2-SNAPSHOT</onebusaway_version>
-    <distribution_id>nexus.onebusaway.org-releases</distribution_id>
-    <distribution_url>http://nexus.onebusaway.org/content/repositories/releases/</distribution_url>
-    <snapshot_distribution_id>nexus.onebusaway.org-snapshots</snapshot_distribution_id>
-    <snapshot_distribution_url>http://nexus.onebusaway.org/content/repositories/snapshots/</snapshot_distribution_url>
   </properties>
 
   <repositories>
@@ -28,10 +25,15 @@
   </repositories>
 
   <scm>
-    <connection>scm:svn:http://onebusaway.googlecode.com/svn/onebusaway-quickstart/trunk</connection>
-    <developerConnection>scm:svn:https://onebusaway.googlecode.com/svn/onebusaway-quickstart/trunk</developerConnection>
-    <url>http://code.google.com/p/onebusaway/source/browse/#svn/onebusaway-quickstart/trunk</url>
+    <connection>scm:git:http://github.com/OneBusAway/onebusaway-quickstart.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/OneBusAway/onebusaway-quickstart.git</developerConnection>
+    <url>http://github.com/OneBusAway/onebusaway-quickstart</url>
   </scm>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/OneBusAway/onebusaway-quickstart/issues</url>
+  </issueManagement>
 
   <distributionManagement>
     <!-- Even though we specify this in the parent pom, we need to specify it here to have full control over the url -->
